# MPHYS

./: .gitignore  readme.md
analysis/: README.md  config.yaml  pyproject.toml
analysis/assets/: README.md
analysis/assets/scripts/: __init__.py  run_all.py  run_event_display.py  run_pid.py  run_segmentation.py  run_sim_dedx.py
analysis/data/: README.md
analysis/data/experimental/: Info.md
analysis/data/simulation/: info.md
analysis/headers/: README.md
analysis/hibeam/: __init__.py  config.py  utils.py
analysis/hibeam/io/: __init__.py  csv_loader.py  exp_loader.py  seg_loader.py  sim_loader.py
analysis/hibeam/physics/: __init__.py  bethe_bloch.py  dedx.py  fitting.py  pid.py  tracks.py
analysis/hibeam/plotting/: __init__.py  displays.py  histograms.py  overlays.py  segmentation_plots.py  style.py
analysis/macros/: README.md  analyse_points.C
analysis/notebooks/: 01_data_inspection.ipynb  02_dedx_fitting.ipynb  03_segmentation_study.ipynb
analysis/scripts/: run_all.py  run_comparison.py  run_event_display.py  run_exp_dedx.py  run_pid.py  run_segmentation.py  run_sim_dedx.py
data_analysis/combined_analysis/: dedx_comparison.py  dedx_data_comparison.py  dedx_overlay_publication.py  fit_results_all_runs.txt
data_analysis/combined_analysis/recovered_headers/: LinkDef.h  (+2 more)
data_analysis/experimental_analysis/: 2Dhisto.py  compare1.py  dx-graph.py  tpc_3d_tracks.py
data_analysis/experimental_data/: Info.txt
data_analysis/python_analysis/: analysis2.py  branch_inspector.py  combining_dedx.py  energyattempt.py  full_data_ana.py  headers.py  muon_simple.py  newtracks.py  npointsenergy_graph.py  plot3d.py  plot_npoints.py  plot_tracks.py  testing.py
data_analysis/segmentation/: final.py  nhits.py  overlay.py  segmentation_overlay.py  simple.py
data_analysis/simulation_analysis/: 3Dplot.py  bethebloch.py  final.py  fit_csv.py  prototpc_final.py  sim_dedx_plots.py  sim_prototpc_dedx.py  tpc_dedx_pub.py
initial-proj/final_sim_data/: info.md
initial-proj/hibeam_g4/: CMakeLists.txt  README.md  hibeam_g4.cc
initial-proj/hibeam_g4/include/: ActionInitialization.hh  Config.hh  ConvertGeo.hh  EventAction.hh  G4MCPLGenerator.hh  GeometryController.hh  MultiHits.hh  PhysicsList.hh  PrimaryEvent.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunData.hh  SamplingD.hh  ScatteringGenerator.hh  ScatteringGeneratorAction.hh  SensitiveD.hh  SingleHit.hh  SteppingAction.hh  VDetectorConstruction.hh  WasaDetectorConstruction.hh
initial-proj/hibeam_g4/macros/: example.config  krakow.config  krakowscatter.config  muonlab.config  prototpc.config  run_gps.mac  run_krakow.mac  run_mcpl.mac  run_scattering.mac  set_colors.mac  sigma_pd_cm_190.txt
initial-proj/hibeam_g4/src/: ActionInitialization.cc  Config.cc  ConvertGeo.cc  EventAction.cc  G4MCPLGenerator.cc  GeometryController.cc  MultiHits.cc  PhysicsList.cc  PrimaryEvent.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunData.cc  SamplingD.cc  ScatteringGenerator.cc  ScatteringGeneratorAction.cc  SensitiveD.cc  SingleHit.cc  SteppingAction.cc  VDetectorConstruction.cc  WasaDetectorConstruction.cc
initial-proj/hibeam_g4_analysis/: CMakeLists.txt  README.md  hibeam_ana.cxx
initial-proj/hibeam_g4_analysis/include/: CVHit.hh  GenSciHit.hh  HRDSciHit.hh  Linkdef.h  ProtoTPCHit.hh  SECHit.hh  ScintAna.hh  ScintHit.hh  SimpleSciHit.hh  TPCHit.hh  TrigSciHit.hh  hibeam_g4.h  hibeam_g4_source.h
initial-proj/hibeam_g4_analysis/src/: CVHit.cxx  GenSciHit.cxx  HRDSciHit.cxx  ProtoTPCHit.cxx  SECHit.cxx  ScintAna.cxx  ScintHit.cxx  SimpleSciHit.cxx  TPCHit.cxx  TrigSciHit.cxx  hibeam_g4.cxx  hibeam_g4_source.cxx
initial-proj/paolo_analysis/: colourEloss.c  energyloss_sum.c  full_dEdx_plot.py  paths.c  saveGraph.c
other/matthias_test_files/: krakow.config  krakow.geoconf  run_krakow.mac
other/public_summary_exports/: export.py  readme.md
(+78 files in other folders)
